; ModuleID = '/home/carl/AnghaBench/vlc/modules/audio_output/extr_coreaudio_common.c_ca_Initialize.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/audio_output/extr_coreaudio_common.c_ca_Initialize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i64 }
%struct.TYPE_6__ = type { i64, i64, i64, i64 }
%struct.aout_sys_common = type { i32, i64, i64, i64, i64, i32, i32, i64, i64, i64, i64, i64 }

@AUDIO_CHANNEL_TYPE_AMBISONICS = common dso_local global i64 0, align 8
@VLC_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ca_Initialize(%struct.TYPE_7__* %0, %struct.TYPE_6__* %1, i32 %2) #0 {
  %4 = alloca %struct.TYPE_7__*, align 8
  %5 = alloca %struct.TYPE_6__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.aout_sys_common*, align 8
  %8 = alloca i64, align 8
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %4, align 8
  store %struct.TYPE_6__* %1, %struct.TYPE_6__** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %10 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = inttoptr i64 %11 to %struct.aout_sys_common*
  store %struct.aout_sys_common* %12, %struct.aout_sys_common** %7, align 8
  %13 = load %struct.aout_sys_common*, %struct.aout_sys_common** %7, align 8
  %14 = getelementptr inbounds %struct.aout_sys_common, %struct.aout_sys_common* %13, i32 0, i32 11
  store i64 0, i64* %14, align 8
  %15 = load %struct.aout_sys_common*, %struct.aout_sys_common** %7, align 8
  %16 = getelementptr inbounds %struct.aout_sys_common, %struct.aout_sys_common* %15, i32 0, i32 0
  store i32 0, i32* %16, align 8
  %17 = load %struct.aout_sys_common*, %struct.aout_sys_common** %7, align 8
  %18 = getelementptr inbounds %struct.aout_sys_common, %struct.aout_sys_common* %17, i32 0, i32 9
  store i64 0, i64* %18, align 8
  %19 = load %struct.aout_sys_common*, %struct.aout_sys_common** %7, align 8
  %20 = getelementptr inbounds %struct.aout_sys_common, %struct.aout_sys_common* %19, i32 0, i32 10
  store i64 0, i64* %20, align 8
  %21 = load %struct.aout_sys_common*, %struct.aout_sys_common** %7, align 8
  %22 = getelementptr inbounds %struct.aout_sys_common, %struct.aout_sys_common* %21, i32 0, i32 8
  store i64 0, i64* %22, align 8
  %23 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %24 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = load %struct.aout_sys_common*, %struct.aout_sys_common** %7, align 8
  %27 = getelementptr inbounds %struct.aout_sys_common, %struct.aout_sys_common* %26, i32 0, i32 1
  store i64 %25, i64* %27, align 8
  %28 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %29 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %28, i32 0, i32 1
  %30 = load i64, i64* %29, align 8
  %31 = load %struct.aout_sys_common*, %struct.aout_sys_common** %7, align 8
  %32 = getelementptr inbounds %struct.aout_sys_common, %struct.aout_sys_common* %31, i32 0, i32 2
  store i64 %30, i64* %32, align 8
  %33 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %34 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %33, i32 0, i32 2
  %35 = load i64, i64* %34, align 8
  %36 = load %struct.aout_sys_common*, %struct.aout_sys_common** %7, align 8
  %37 = getelementptr inbounds %struct.aout_sys_common, %struct.aout_sys_common* %36, i32 0, i32 3
  store i64 %35, i64* %37, align 8
  %38 = load %struct.aout_sys_common*, %struct.aout_sys_common** %7, align 8
  %39 = getelementptr inbounds %struct.aout_sys_common, %struct.aout_sys_common* %38, i32 0, i32 7
  store i64 0, i64* %39, align 8
  %40 = load i32, i32* %6, align 4
  %41 = load %struct.aout_sys_common*, %struct.aout_sys_common** %7, align 8
  %42 = getelementptr inbounds %struct.aout_sys_common, %struct.aout_sys_common* %41, i32 0, i32 6
  store i32 %40, i32* %42, align 4
  %43 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %44 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %43, i32 0, i32 0
  %45 = load i64, i64* %44, align 8
  %46 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %47 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %46, i32 0, i32 1
  %48 = load i64, i64* %47, align 8
  %49 = mul i64 %45, %48
  %50 = load %struct.aout_sys_common*, %struct.aout_sys_common** %7, align 8
  %51 = getelementptr inbounds %struct.aout_sys_common, %struct.aout_sys_common* %50, i32 0, i32 3
  %52 = load i64, i64* %51, align 8
  %53 = udiv i64 %49, %52
  store i64 %53, i64* %8, align 8
  %54 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %55 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %54, i32 0, i32 3
  %56 = load i64, i64* %55, align 8
  %57 = load i64, i64* @AUDIO_CHANNEL_TYPE_AMBISONICS, align 8
  %58 = icmp eq i64 %56, %57
  br i1 %58, label %59, label %64

59:                                               ; preds = %3
  %60 = load i64, i64* %8, align 8
  %61 = udiv i64 %60, 5
  %62 = load %struct.aout_sys_common*, %struct.aout_sys_common** %7, align 8
  %63 = getelementptr inbounds %struct.aout_sys_common, %struct.aout_sys_common* %62, i32 0, i32 4
  store i64 %61, i64* %63, align 8
  br label %69

64:                                               ; preds = %3
  %65 = load i64, i64* %8, align 8
  %66 = mul i64 %65, 2
  %67 = load %struct.aout_sys_common*, %struct.aout_sys_common** %7, align 8
  %68 = getelementptr inbounds %struct.aout_sys_common, %struct.aout_sys_common* %67, i32 0, i32 4
  store i64 %66, i64* %68, align 8
  br label %69

69:                                               ; preds = %64, %59
  %70 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %71 = call i32 @ca_ClearOutBuffers(%struct.TYPE_7__* %70)
  %72 = load %struct.aout_sys_common*, %struct.aout_sys_common** %7, align 8
  %73 = getelementptr inbounds %struct.aout_sys_common, %struct.aout_sys_common* %72, i32 0, i32 5
  store i32 0, i32* %73, align 8
  %74 = load i32, i32* @VLC_SUCCESS, align 4
  ret i32 %74
}

declare dso_local i32 @ca_ClearOutBuffers(%struct.TYPE_7__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
